--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake Game
 
 on:
   schedule:
-    # Executa a cada 12 horas (Você pode ajustar)
+    # Executa a cada 12 horas
     - cron: "0 */12 * * *"
   workflow_dispatch:
   
@@ -10,6 +10,11 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    
+    # 🌟 NOVA SEÇÃO NECESSÁRIA! 🌟
+    permissions:
+      contents: write 
+    # 🌟 ---------------------- 🌟
     
     steps:
       # 1. Checkout do repositório
@@ -20,9 +25,7 @@ jobs:
       - name: Generate GitHub Snake SVG
         uses: Platane/snk@v3
         with:
-          # Seu nome de usuário do GitHub (obrigatório)
           github_user_name: ${{ github.repository_owner }}
-          # Arquivos de saída
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
@@ -31,7 +34,5 @@ jobs:
       - name: Commit and Push
         uses: EndBug/add-and-commit@v9
         with:
-          # Mensagem do commit
           message: 'Generate snake game animation'
-          # Arquivos a serem adicionados
           add: 'dist/github-snake.svg dist/github-snake-dark.svg'
